# NIPET

./: pyproject.toml  setup.cfg
niftypet/nipet/: mmraux.py  mmrnorm.py
niftypet/nipet/img/: mmrimg.py
